# SyntezatorSuperWave

./: .gitignore  CMakeLists.txt  README.md  SimpleSynth.jucer
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: Envelope.cpp  Envelope.h  FilterData.h  LFO.h  ModMatrix.cpp  ModMatrix.h  Osc.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedData.h  SynthSound.h  SynthVoice.h  VAOsc.h  analogEG.h  clipper.h  customLook.cpp  customLook.h  filterGUI.cpp  filterGUI.h  helpers.h  helpersUI.h  modMatrixGUI.cpp  modMatrixGUI.h  oscGUI.cpp  oscGUI.h  presetGUI.cpp  presetGUI.h
Source/gui/: Envelope.cpp  Envelope.h  customLook.cpp  customLook.h  filterGUI.cpp  filterGUI.h  helpersUI.h  modMatrixGUI.cpp  modMatrixGUI.h  oscGUI.cpp  oscGUI.h  presetGUI.cpp  presetGUI.h
